@@ -3,43 +3,65 @@ package org.joinmastodon.android.api.session;
 import android.app.Activity;
 import android.app.NotificationManager;
 import android.content.ComponentName;
+import android.content.ContentValues;
 import android.content.Context;
 import android.content.Intent;
 import android.content.SharedPreferences;
 import android.content.pm.ShortcutInfo;
 import android.content.pm.ShortcutManager;
+import android.database.Cursor;
+import android.database.DatabaseUtils;
+import android.database.sqlite.SQLiteDatabase;
+import android.database.sqlite.SQLiteException;
+import android.database.sqlite.SQLiteOpenHelper;
 import android.graphics.drawable.Icon;
 import android.net.Uri;
 import android.os.Build;
+import android.text.TextUtils;
 import android.util.Log;
+
+import com.google.gson.JsonArray;
+import com.google.gson.JsonElement;
+import com.google.gson.JsonObject;
+import com.google.gson.JsonParser;
+import com.google.gson.reflect.TypeToken;
 
 import org.joinmastodon.android.BuildConfig;
 import org.joinmastodon.android.E;
 import org.joinmastodon.android.MainActivity;
 import org.joinmastodon.android.MastodonApp;
 import org.joinmastodon.android.R;
+import org.joinmastodon.android.api.CacheController;
+import org.joinmastodon.android.api.DatabaseRunnable;
 import org.joinmastodon.android.api.MastodonAPIController;
+import org.joinmastodon.android.api.MastodonAPIRequest;
+import org.joinmastodon.android.api.MastodonErrorResponse;
 import org.joinmastodon.android.api.PushSubscriptionManager;
+import org.joinmastodon.android.api.WrapperRequest;
+import org.joinmastodon.android.api.gson.JsonObjectBuilder;
+import org.joinmastodon.android.api.requests.accounts.GetOwnAccount;
 import org.joinmastodon.android.api.requests.filters.GetLegacyFilters;
 import org.joinmastodon.android.api.requests.instance.GetCustomEmojis;
-import org.joinmastodon.android.api.requests.accounts.GetOwnAccount;
-import org.joinmastodon.android.api.requests.instance.GetInstance;
+import org.joinmastodon.android.api.requests.instance.GetInstanceV1;
+import org.joinmastodon.android.api.requests.instance.GetInstanceV2;
 import org.joinmastodon.android.api.requests.oauth.CreateOAuthApp;
 import org.joinmastodon.android.events.EmojiUpdatedEvent;
 import org.joinmastodon.android.model.Account;
 import org.joinmastodon.android.model.Application;
 import org.joinmastodon.android.model.Emoji;
 import org.joinmastodon.android.model.EmojiCategory;
-import org.joinmastodon.android.model.LegacyFilter;
 import org.joinmastodon.android.model.Instance;
+import org.joinmastodon.android.model.InstanceV1;
+import org.joinmastodon.android.model.InstanceV2;
+import org.joinmastodon.android.model.LegacyFilter;
+import org.joinmastodon.android.model.Preferences;
 import org.joinmastodon.android.model.Token;
+import org.joinmastodon.android.ui.utils.UiUtils;
 
 import java.io.File;
 import java.io.FileInputStream;
-import java.io.FileOutputStream;
 import java.io.IOException;
 import java.io.InputStreamReader;
-import java.io.OutputStreamWriter;
 import java.nio.charset.StandardCharsets;
 import java.util.ArrayList;
 import java.util.Collections;
@@ -53,6 +75,7 @@ import java.util.stream.Collectors;
 import androidx.annotation.NonNull;
 import androidx.annotation.Nullable;
 import androidx.browser.customtabs.CustomTabsIntent;
+import me.grishka.appkit.api.APIRequest;
 import me.grishka.appkit.api.Callback;
 import me.grishka.appkit.api.ErrorResponse;
 
@@ -60,6 +83,7 @@ public class AccountSessionManager{
 	private static final String TAG="AccountSessionManager";
 	public static final String SCOPE="read write follow push";
 	public static final String REDIRECT_URI="mastodon-android-auth://callback";
+	private static final int DB_VERSION=3;
 
 	private static final AccountSessionManager instance=new AccountSessionManager();
 
@@ -73,6 +97,9 @@ public class AccountSessionManager{
 	private String lastActiveAccountID;
 	private SharedPreferences prefs;
 	private boolean loadedInstances;
+	private DatabaseHelper db;
+	private final Runnable databaseCloseRunnable=this::closeDatabase;
+	private final Object databaseLock=new Object();
 
 	public static AccountSessionManager getInstance(){
 		return instance;
@@ -80,51 +107,40 @@ public class AccountSessionManager{
 
 	private AccountSessionManager(){
 		prefs=MastodonApp.context.getSharedPreferences("account_manager", Context.MODE_PRIVATE);
-		File file=new File(MastodonApp.context.getFilesDir(), "accounts.json");
-		if(!file.exists())
-			return;
-		HashSet<String> domains=new HashSet<>();
-		try(FileInputStream in=new FileInputStream(file)){
-			SessionsStorageWrapper w=MastodonAPIController.gson.fromJson(new InputStreamReader(in, StandardCharsets.UTF_8), SessionsStorageWrapper.class);
-			for(AccountSession session:w.accounts){
-				domains.add(session.domain.toLowerCase());
-				sessions.put(session.getID(), session);
+		runWithDatabase(db->{
+			HashSet<String> domains=new HashSet<>();
+			try(Cursor cursor=db.query("accounts", null, null, null, null, null, null)){
+				ContentValues values=new ContentValues();
+				while(cursor.moveToNext()){
+					DatabaseUtils.cursorRowToContentValues(cursor, values);
+					AccountSession session=new AccountSession(values);
+					domains.add(session.domain.toLowerCase());
+					sessions.put(session.getID(), session);
+				}
 			}
-		}catch(Exception x){
-			Log.e(TAG, "Error loading accounts", x);
-		}
+			readInstanceInfo(db, domains);
+		});
 		lastActiveAccountID=prefs.getString("lastActiveAccount", null);
-		MastodonAPIController.runInBackground(()->readInstanceInfo(domains));
 		maybeUpdateShortcuts();
 	}
 
 	public void addAccount(Instance instance, Token token, Account self, Application app, AccountActivationInfo activationInfo){
-		instances.put(instance.uri, instance);
-		AccountSession session=new AccountSession(token, self, app, instance.uri, activationInfo==null, activationInfo);
+		instances.put(instance.getDomain(), instance);
+		runOnDbThread(db->insertInstanceIntoDatabase(db, instance.getDomain(), instance, null, 0));
+		AccountSession session=new AccountSession(token, self, app, instance.getDomain(), activationInfo==null, activationInfo);
 		sessions.put(session.getID(), session);
 		lastActiveAccountID=session.getID();
-		writeAccountsFile();
-		updateInstanceEmojis(instance, instance.uri);
+		prefs.edit().putString("lastActiveAccount", lastActiveAccountID).apply();
+		runOnDbThread(db->{
+			ContentValues values=new ContentValues();
+			session.toContentValues(values);
+			db.insertWithOnConflict("accounts", null, values, SQLiteDatabase.CONFLICT_REPLACE);
+		});
+		updateInstanceEmojis(instance, instance.getDomain());
 		if(PushSubscriptionManager.arePushNotificationsAvailable()){
 			session.getPushSubscriptionManager().registerAccountForPush(null);
 		}
 		maybeUpdateShortcuts();
-	}
-
-	public synchronized void writeAccountsFile(){
-		File file=new File(MastodonApp.context.getFilesDir(), "accounts.json");
-		try{
-			try(FileOutputStream out=new FileOutputStream(file)){
-				SessionsStorageWrapper w=new SessionsStorageWrapper();
-				w.accounts=new ArrayList<>(sessions.values());
-				OutputStreamWriter writer=new OutputStreamWriter(out, StandardCharsets.UTF_8);
-				MastodonAPIController.gson.toJson(w, writer);
-				writer.flush();
-			}
-		}catch(IOException x){
-			Log.e(TAG, "Error writing accounts file", x);
-		}
-		prefs.edit().putString("lastActiveAccount", lastActiveAccountID).apply();
 	}
 
 	@NonNull
@@ -156,7 +172,7 @@ public class AccountSessionManager{
 		if(!sessions.containsKey(lastActiveAccountID)){
 			// TODO figure out why this happens. It should not be possible.
 			lastActiveAccountID=getLoggedInAccounts().get(0).getID();
-			writeAccountsFile();
+			prefs.edit().putString("lastActiveAccount", lastActiveAccountID).apply();
 		}
 		return getAccount(lastActiveAccountID);
 	}
@@ -175,7 +191,6 @@ public class AccountSessionManager{
 	public void removeAccount(String id){
 		AccountSession session=getAccount(id);
 		session.getCacheController().closeDatabase();
-		session.getCacheController().getListsFile().delete();
 		MastodonApp.context.deleteDatabase(id+".db");
 		MastodonApp.context.getSharedPreferences(id, 0).edit().clear().commit();
 		if(Build.VERSION.SDK_INT>=Build.VERSION_CODES.N){
@@ -195,14 +210,15 @@ public class AccountSessionManager{
 				lastActiveAccountID=getLoggedInAccounts().get(0).getID();
 			prefs.edit().putString("lastActiveAccount", lastActiveAccountID).apply();
 		}
-		writeAccountsFile();
-		String domain=session.domain.toLowerCase();
-		if(sessions.isEmpty() || !sessions.values().stream().map(s->s.domain.toLowerCase()).collect(Collectors.toSet()).contains(domain)){
-			getInstanceInfoFile(domain).delete();
-		}
+		runOnDbThread(db->{
+			db.delete("accounts", "`id`=?", new String[]{id});
+			db.delete("instances", "`domain` NOT IN (SELECT DISTINCT `domain` FROM `accounts`)", new String[]{});
+		});
 		if(Build.VERSION.SDK_INT>=Build.VERSION_CODES.O){
 			NotificationManager nm=MastodonApp.context.getSystemService(NotificationManager.class);
-			nm.deleteNotificationChannelGroup(id);
+			try{
+				nm.deleteNotificationChannelGroup(id);
+			}catch(Exception ignore){}
 		}
 		maybeUpdateShortcuts();
 	}
@@ -221,7 +237,7 @@ public class AccountSessionManager{
 						authenticatingApp=result;
 						Uri uri=new Uri.Builder()
 								.scheme("https")
-								.authority(instance.uri)
+								.authority(instance.getDomain())
 								.path("/oauth/authorize")
 								.appendQueryParameter("response_type", "code")
 								.appendQueryParameter("client_id", result.clientId)
@@ -242,7 +258,7 @@ public class AccountSessionManager{
 					}
 				})
 				.wrapProgress(activity, R.string.preparing_auth, false)
-				.execNoAuth(instance.uri);
+				.execNoAuth(instance.getDomain());
 	}
 
 	public boolean isSelf(String id, Account other){
@@ -270,11 +286,11 @@ public class AccountSessionManager{
 			}
 		}
 		if(loadedInstances){
-			maybeUpdateCustomEmojis(domains);
+			maybeUpdateInstanceInfo(domains);
 		}
 	}
 
-	private void maybeUpdateCustomEmojis(Set<String> domains){
+	private void maybeUpdateInstanceInfo(Set<String> domains){
 		long now=System.currentTimeMillis();
 		for(String domain:domains){
 			Long lastUpdated=instancesLastUpdated.get(domain);
@@ -291,7 +307,12 @@ public class AccountSessionManager{
 					public void onSuccess(Account result){
 						session.self=result;
 						session.infoLastUpdated=System.currentTimeMillis();
-						writeAccountsFile();
+						runOnDbThread(db->{
+							ContentValues values=new ContentValues();
+							values.put("account_obj", MastodonAPIController.gson.toJson(result));
+							values.put("info_last_updated", session.infoLastUpdated);
+							db.update("accounts", values, "`id`=?", new String[]{session.getID()});
+						});
 					}
 
 					@Override
@@ -309,7 +330,15 @@ public class AccountSessionManager{
 					public void onSuccess(List<LegacyFilter> result){
 						session.wordFilters=result;
 						session.filtersLastUpdated=System.currentTimeMillis();
-						writeAccountsFile();
+						runOnDbThread(db->{
+							ContentValues values=new ContentValues();
+							values.put("legacy_filters", new JsonObjectBuilder()
+									.add("filters", MastodonAPIController.gson.toJsonTree(session.wordFilters))
+									.add("updated", session.filtersLastUpdated)
+									.build()
+									.toString());
+							db.update("accounts", values, "`id`=?", new String[]{session.getID()});
+						});
 					}
 
 					@Override
@@ -321,11 +350,11 @@ public class AccountSessionManager{
 	}
 
 	public void updateInstanceInfo(String domain){
-		new GetInstance()
-				.setCallback(new Callback<>(){
+		loadInstanceInfo(domain, new Callback<>(){
 					@Override
 					public void onSuccess(Instance instance){
 						instances.put(domain, instance);
+						runOnDbThread(db->insertInstanceIntoDatabase(db, domain, instance, null, 0));
 						updateInstanceEmojis(instance, domain);
 					}
 
@@ -333,22 +362,18 @@ public class AccountSessionManager{
 					public void onError(ErrorResponse error){
 
 					}
-				})
-				.execNoAuth(domain);
+				});
 	}
 
 	private void updateInstanceEmojis(Instance instance, String domain){
-		new GetCustomEmojis()
+		GetCustomEmojis getCustomEmojisRequest=(GetCustomEmojis)new GetCustomEmojis()
 				.setCallback(new Callback<>(){
 					@Override
 					public void onSuccess(List<Emoji> result){
-						InstanceInfoStorageWrapper emojis=new InstanceInfoStorageWrapper();
-						emojis.lastUpdated=System.currentTimeMillis();
-						emojis.emojis=result;
-						emojis.instance=instance;
-						customEmojis.put(domain, groupCustomEmojis(emojis));
-						instancesLastUpdated.put(domain, emojis.lastUpdated);
-						MastodonAPIController.runInBackground(()->writeInstanceInfoFile(emojis, domain));
+						long lastUpdated=System.currentTimeMillis();
+						customEmojis.put(domain, groupCustomEmojis(result));
+						instancesLastUpdated.put(domain, lastUpdated);
+						runOnDbThread(db->insertInstanceIntoDatabase(db, domain, instance, result, lastUpdated));
 						E.post(new EmojiUpdatedEvent(domain));
 					}
 
@@ -356,44 +381,64 @@ public class AccountSessionManager{
 					public void onError(ErrorResponse error){
 
 					}
-				})
-				.execNoAuth(domain);
+				});
+
+		sessions.values().stream().filter(session->session.domain.equals(domain)).findFirst().ifPresentOrElse(
+				(session)->getCustomEmojisRequest.exec(domain, session.token),
+				()->getCustomEmojisRequest.execNoAuth(domain)
+		);
 	}
 
-	private File getInstanceInfoFile(String domain){
-		return new File(MastodonApp.context.getFilesDir(), "instance_"+domain.replace('.', '_')+".json");
-	}
-
-	private void writeInstanceInfoFile(InstanceInfoStorageWrapper emojis, String domain){
-		try(FileOutputStream out=new FileOutputStream(getInstanceInfoFile(domain))){
-			OutputStreamWriter writer=new OutputStreamWriter(out, StandardCharsets.UTF_8);
-			MastodonAPIController.gson.toJson(emojis, writer);
-			writer.flush();
-		}catch(IOException x){
-			Log.w(TAG, "Error writing instance info file for "+domain, x);
-		}
-	}
-
-	private void readInstanceInfo(Set<String> domains){
-		for(String domain:domains){
-			try(FileInputStream in=new FileInputStream(getInstanceInfoFile(domain))){
-				InputStreamReader reader=new InputStreamReader(in, StandardCharsets.UTF_8);
-				InstanceInfoStorageWrapper emojis=MastodonAPIController.gson.fromJson(reader, InstanceInfoStorageWrapper.class);
-				customEmojis.put(domain, groupCustomEmojis(emojis));
-				instances.put(domain, emojis.instance);
-				instancesLastUpdated.put(domain, emojis.lastUpdated);
-			}catch(Exception x){
-				Log.w(TAG, "Error reading instance info file for "+domain, x);
+	private void readInstanceInfo(SQLiteDatabase db, Set<String> domains){
+		for(String domain : domains){
+			final int maxEmojiLength=500000;
+			try(Cursor cursor=db.rawQuery("SELECT domain, instance_obj, substr(emojis,1,?) AS emojis, length(emojis) AS emoji_length, last_updated, version FROM instances WHERE `domain` = ?",
+					new String[]{String.valueOf(maxEmojiLength) , domain})) {
+				ContentValues values=new ContentValues();
+				while(cursor.moveToNext()){
+					DatabaseUtils.cursorRowToContentValues(cursor, values);
+					int version=values.getAsInteger("version");
+					Instance instance=MastodonAPIController.gson.fromJson(values.getAsString("instance_obj"), switch(version){
+						case 1 -> InstanceV1.class;
+						case 2 -> InstanceV2.class;
+						default -> throw new IllegalStateException("Unexpected value: "+version);
+					});
+					instances.put(domain, instance);
+					StringBuilder emojiSB=new StringBuilder();
+					String emojiPart=values.getAsString("emojis");
+					if(TextUtils.isEmpty(emojiPart)){
+						// not putting anything into instancesLastUpdated to force a reload
+						continue;
+					}
+					emojiSB.append(emojiPart);
+					//get emoji in chunks of 1MB if it didn't fit in the first query
+					int emojiStringLength=values.getAsInteger("emoji_length");
+					if(emojiStringLength>maxEmojiLength){
+						final int pagesize=1000000;
+						for(int start=maxEmojiLength + 1; start<=emojiStringLength; start+=pagesize){
+							try(Cursor emojiCursor=db.rawQuery("SELECT substr(emojis,?, ?) FROM instances WHERE `domain` = ?", new String[]{String.valueOf(start), String.valueOf(pagesize), domain})){
+								emojiCursor.moveToNext();
+								emojiSB.append(emojiCursor.getString(0));
+							}
+						}
+					}
+					List<Emoji> emojis=MastodonAPIController.gson.fromJson(emojiSB.toString(), new TypeToken<List<Emoji>>(){}.getType());
+					customEmojis.put(domain, groupCustomEmojis(emojis));
+					instancesLastUpdated.put(domain, values.getAsLong("last_updated"));
+				}
+			}catch(Exception ex){
+				Log.d(TAG, "readInstanceInfo failed", ex);
+				// instancesLastUpdated will not contain that domain, so instance data will be forced to be reloaded
 			}
 		}
 		if(!loadedInstances){
 			loadedInstances=true;
-			maybeUpdateCustomEmojis(domains);
+			MastodonAPIController.runInBackground(()->maybeUpdateInstanceInfo(domains));
 		}
 	}
 
-	private List<EmojiCategory> groupCustomEmojis(InstanceInfoStorageWrapper emojis){
-		return emojis.emojis.stream()
+	private List<EmojiCategory> groupCustomEmojis(List<Emoji> emojis){
+		return emojis.stream()
 				.filter(e->e.visibleInPicker)
 				.collect(Collectors.groupingBy(e->e.category==null ? "" : e.category))
 				.entrySet()
@@ -409,14 +454,66 @@ public class AccountSessionManager{
 	}
 
 	public Instance getInstanceInfo(String domain){
-		return instances.get(domain);
+		Instance i=instances.get(domain);
+		if(i!=null)
+			return i;
+		Log.e(TAG, "Instance info for "+domain+" was not found. This should normally never happen. Returning fake instance object");
+		if(BuildConfig.DEBUG)
+			throw new IllegalStateException("Instance info for "+domain+" missing");
+		InstanceV1 fake=new InstanceV1();
+		fake.uri=fake.title=domain;
+		fake.description=fake.version=fake.email="";
+		updateInstanceInfo(domain);
+		return fake;
 	}
 
 	public void updateAccountInfo(String id, Account account){
 		AccountSession session=getAccount(id);
 		session.self=account;
 		session.infoLastUpdated=System.currentTimeMillis();
-		writeAccountsFile();
+		runOnDbThread(db->{
+			ContentValues values=new ContentValues();
+			values.put("account_obj", MastodonAPIController.gson.toJson(account));
+			values.put("info_last_updated", session.infoLastUpdated);
+			db.update("accounts", values, "`id`=?", new String[]{session.getID()});
+		});
+	}
+
+	public void updateAccountPreferences(String id, Preferences prefs){
+		AccountSession session=getAccount(id);
+		session.preferences=prefs;
+		runOnDbThread(db->{
+			ContentValues values=new ContentValues();
+			values.put("preferences", MastodonAPIController.gson.toJson(prefs));
+			db.update("accounts", values, "`id`=?", new String[]{session.getID()});
+		});
+	}
+
+	public void writeAccountPushSettings(String id){
+		AccountSession session=getAccount(id);
+		runWithDatabase(db->{ // Called from a background thread anyway
+			ContentValues values=new ContentValues();
+			values.put("push_keys", new JsonObjectBuilder()
+					.add("auth", session.pushAuthKey)
+					.add("private", session.pushPrivateKey)
+					.add("public", session.pushPublicKey)
+					.build()
+					.toString());
+			values.put("push_subscription", MastodonAPIController.gson.toJson(session.pushSubscription));
+			values.put("flags", session.getFlagsForDatabase());
+			values.put("push_id", session.pushAccountID);
+			db.update("accounts", values, "`id`=?", new String[]{id});
+		});
+	}
+
+	public void writeAccountActivationInfo(String id){
+		AccountSession session=getAccount(id);
+		runOnDbThread(db->{
+			ContentValues values=new ContentValues();
+			values.put("activation_info", MastodonAPIController.gson.toJson(session.activationInfo));
+			values.put("flags", session.getFlagsForDatabase());
+			db.update("accounts", values, "`id`=?", new String[]{id});
+		});
 	}
 
 	private void maybeUpdateShortcuts(){
@@ -425,7 +522,7 @@ public class AccountSessionManager{
 		ShortcutManager sm=MastodonApp.context.getSystemService(ShortcutManager.class);
 		if((sm.getDynamicShortcuts().isEmpty() || BuildConfig.DEBUG) && !sessions.isEmpty()){
 			// There are no shortcuts, but there are accounts. Add a compose shortcut.
-			ShortcutInfo info=new ShortcutInfo.Builder(MastodonApp.context, "compose")
+			ShortcutInfo compose=new ShortcutInfo.Builder(MastodonApp.context, "compose")
 					.setActivity(ComponentName.createRelative(MastodonApp.context, MainActivity.class.getName()))
 					.setShortLabel(MastodonApp.context.getString(R.string.new_post))
 					.setIcon(Icon.createWithResource(MastodonApp.context, R.mipmap.ic_shortcut_compose))
@@ -433,22 +530,266 @@ public class AccountSessionManager{
 							.setAction(Intent.ACTION_MAIN)
 							.putExtra("compose", true))
 					.build();
-			sm.setDynamicShortcuts(Collections.singletonList(info));
+			ShortcutInfo explore=new ShortcutInfo.Builder(MastodonApp.context, "explore")
+					.setActivity(ComponentName.createRelative(MastodonApp.context, MainActivity.class.getName()))
+					.setShortLabel(MastodonApp.context.getString(R.string.tab_search))
+					.setIcon(Icon.createWithResource(MastodonApp.context, R.mipmap.ic_shortcut_explore))
+					.setIntent(new Intent(MastodonApp.context, MainActivity.class)
+							.setAction(Intent.ACTION_MAIN)
+							.putExtra("explore", true))
+					.build();
+			sm.setDynamicShortcuts(List.of(compose, explore));
 		}else if(sessions.isEmpty()){
 			// There are shortcuts, but no accounts. Disable existing shortcuts.
-			sm.disableShortcuts(Collections.singletonList("compose"), MastodonApp.context.getString(R.string.err_not_logged_in));
+			sm.disableShortcuts(List.of("compose", "explore"), MastodonApp.context.getString(R.string.err_not_logged_in));
 		}else{
-			sm.enableShortcuts(Collections.singletonList("compose"));
+			sm.enableShortcuts(List.of("compose", "explore"));
 		}
 	}
 
-	private static class SessionsStorageWrapper{
-		public List<AccountSession> accounts;
+	private void closeDelayed(){
+		CacheController.databaseThread.postRunnable(databaseCloseRunnable, 10_000);
 	}
 
-	private static class InstanceInfoStorageWrapper{
-		public Instance instance;
-		public List<Emoji> emojis;
-		public long lastUpdated;
+	public void closeDatabase(){
+		if(db!=null){
+			if(BuildConfig.DEBUG)
+				Log.d(TAG, "closeDatabase");
+			db.close();
+			db=null;
+		}
+	}
+
+	private void cancelDelayedClose(){
+		if(db!=null){
+			CacheController.databaseThread.handler.removeCallbacks(databaseCloseRunnable);
+		}
+	}
+
+	private SQLiteDatabase getOrOpenDatabase(){
+		if(db==null)
+			db=new DatabaseHelper();
+		return db.getWritableDatabase();
+	}
+
+	private void runOnDbThread(DatabaseRunnable r){
+		CacheController.databaseThread.postRunnable(()->{
+			synchronized(databaseLock){
+				cancelDelayedClose();
+				try{
+					SQLiteDatabase db=getOrOpenDatabase();
+					r.run(db);
+				}catch(SQLiteException|IOException x){
+					Log.w(TAG, x);
+				}finally{
+					closeDelayed();
+				}
+			}
+		}, 0);
+	}
+
+	private void runWithDatabase(DatabaseRunnable r){
+		synchronized(databaseLock){
+			cancelDelayedClose();
+			try{
+				SQLiteDatabase db=getOrOpenDatabase();
+				r.run(db);
+			}catch(SQLiteException|IOException x){
+				Log.w(TAG, x);
+			}finally{
+				closeDelayed();
+			}
+		}
+	}
+
+	public void runIfDonationCampaignNotDismissed(String id, Runnable action){
+		runOnDbThread(db->{
+			try(Cursor cursor=db.query("dismissed_donation_campaigns", null, "id=?", new String[]{id}, null, null, null)){
+				if(!cursor.moveToFirst()){
+					UiUtils.runOnUiThread(action);
+				}
+			}
+		});
+	}
+
+	public void markDonationCampaignAsDismissed(String id){
+		runOnDbThread(db->{
+			ContentValues values=new ContentValues();
+			values.put("id", id);
+			values.put("dismissed_at", System.currentTimeMillis());
+			db.insert("dismissed_donation_campaigns", null, values);
+		});
+	}
+
+	public void clearDismissedDonationCampaigns(){
+		runOnDbThread(db->db.delete("dismissed_donation_campaigns", null, null));
+	}
+
+	public void clearInstanceInfo(){
+		SQLiteDatabase db=getOrOpenDatabase();
+		db.delete("instances", null, null);
+		db.close();
+	}
+
+	private static void insertInstanceIntoDatabase(SQLiteDatabase db, String domain, Instance instance, List<Emoji> emojis, long lastUpdated){
+		ContentValues values=new ContentValues();
+		values.put("domain", domain);
+		values.put("instance_obj", MastodonAPIController.gson.toJson(instance));
+		if(emojis!=null)
+			values.put("emojis", MastodonAPIController.gson.toJson(emojis));
+		values.put("last_updated", lastUpdated);
+		values.put("version", instance.getVersion());
+		db.insertWithOnConflict("instances", null, values, SQLiteDatabase.CONFLICT_REPLACE);
+	}
+
+	private static AccountSession findAnySessionForDomain(String domain){
+		for(AccountSession session:getInstance().sessions.values()){
+			if(domain.equalsIgnoreCase(session.domain))
+				return session;
+		}
+		return null;
+	}
+
+	public static APIRequest<Instance> loadInstanceInfo(String domain, Callback<Instance> callback){
+		final WrapperRequest<Instance> wrapper=new WrapperRequest<>();
+		AccountSession session=findAnySessionForDomain(domain);
+		MastodonAPIRequest<?> req=new GetInstanceV2()
+				.setCallback(new Callback<>(){
+					@Override
+					public void onSuccess(InstanceV2 result){
+						wrapper.wrappedRequest=null;
+						callback.onSuccess(result);
+					}
+
+					@Override
+					public void onError(ErrorResponse error){
+						if(error instanceof MastodonErrorResponse mr && mr.httpStatus==404){
+							// Mastodon pre-4.0 or a non-Mastodon server altogether. Let's try /api/v1/instance
+							MastodonAPIRequest<?> fallbackReq=new GetInstanceV1()
+									.setCallback(new Callback<>(){
+										@Override
+										public void onSuccess(InstanceV1 result){
+											wrapper.wrappedRequest=null;
+											callback.onSuccess(result);
+										}
+
+										@Override
+										public void onError(ErrorResponse error){
+											wrapper.wrappedRequest=null;
+											callback.onError(error);
+										}
+									});
+							wrapper.wrappedRequest=fallbackReq;
+							if(session!=null)
+								fallbackReq.exec(session.getID());
+							else
+								fallbackReq.execNoAuth(domain);
+						}else{
+							wrapper.wrappedRequest=null;
+							callback.onError(error);
+						}
+					}
+				});
+		wrapper.wrappedRequest=req;
+		if(session!=null)
+			req.exec(session.getID());
+		else
+			req.execNoAuth(domain);
+		return wrapper;
+	}
+
+	private static class DatabaseHelper extends SQLiteOpenHelper{
+		public DatabaseHelper(){
+			super(MastodonApp.context, "accounts.db", null, DB_VERSION);
+		}
+
+		@Override
+		public void onCreate(SQLiteDatabase db){
+			db.execSQL("""
+						CREATE TABLE `dismissed_donation_campaigns` (
+							`id` text PRIMARY KEY,
+							`dismissed_at` bigint
+						)""");
+			createAccountsTable(db);
+			db.execSQL("""
+						CREATE TABLE `instances` (
+							`domain` text PRIMARY KEY,
+							`instance_obj` text,
+							`emojis` text,
+							`last_updated` bigint,
+							`version` integer NOT NULL DEFAULT 1
+						)""");
+			maybeMigrateAccounts(db);
+		}
+
+		@Override
+		public void onUpgrade(SQLiteDatabase db, int oldVersion, int newVersion){
+			if(oldVersion<2){
+				createAccountsTable(db);
+				db.execSQL("""
+						CREATE TABLE `instances` (
+							`domain` text PRIMARY KEY,
+							`instance_obj` text,
+							`emojis` text,
+							`last_updated` bigint
+						)""");
+				maybeMigrateAccounts(db);
+			}
+			if(oldVersion<3){
+				db.execSQL("ALTER TABLE `instances` ADD `version` integer NOT NULL DEFAULT 1");
+			}
+		}
+
+		private void createAccountsTable(SQLiteDatabase db){
+			db.execSQL("""
+						CREATE TABLE `accounts` (
+							`id` text PRIMARY KEY,
+							`domain` text,
+							`account_obj` text,
+							`token` text,
+							`application` text,
+							`info_last_updated` bigint,
+							`flags` bigint,
+							`push_keys` text,
+							`push_subscription` text,
+							`legacy_filters` text DEFAULT NULL,
+							`push_id` text,
+							`activation_info` text,
+							`preferences` text
+						)""");
+		}
+
+		private void maybeMigrateAccounts(SQLiteDatabase db){
+			File accountsFile=new File(MastodonApp.context.getFilesDir(), "accounts.json");
+			if(accountsFile.exists()){
+				HashSet<String> domains=new HashSet<>();
+				try(FileInputStream in=new FileInputStream(accountsFile)){
+					JsonObject jobj=JsonParser.parseReader(new InputStreamReader(in, StandardCharsets.UTF_8)).getAsJsonObject();
+					ContentValues values=new ContentValues();
+					JsonArray accounts=jobj.has("a") ? jobj.getAsJsonArray("a") : jobj.getAsJsonArray("accounts");
+					for(JsonElement jacc:accounts){
+						AccountSession session=MastodonAPIController.gson.fromJson(jacc, AccountSession.class);
+						domains.add(session.domain.toLowerCase());
+						session.toContentValues(values);
+						db.insertWithOnConflict("accounts", null, values, SQLiteDatabase.CONFLICT_REPLACE);
+					}
+				}catch(Exception x){
+					Log.e(TAG, "Error migrating accounts", x);
+					return;
+				}
+				accountsFile.delete();
+				for(String domain:domains){
+					File file=new File(MastodonApp.context.getFilesDir(), "instance_"+domain.replace('.', '_')+".json");
+					try(FileInputStream in=new FileInputStream(file)){
+						JsonObject jobj=JsonParser.parseReader(new InputStreamReader(in, StandardCharsets.UTF_8)).getAsJsonObject();
+						insertInstanceIntoDatabase(db, domain, MastodonAPIController.gson.fromJson(jobj.get(jobj.has("instance") ? "instance" : "a"), Instance.class),
+								MastodonAPIController.gson.fromJson(jobj.get("emojis"), new TypeToken<>(){}.getType()), jobj.get("last_updated").getAsLong());
+					}catch(Exception x){
+						Log.w(TAG, "Error reading instance info file for "+domain, x);
+					}
+					file.delete();
+				}
+			}
+		}
 	}
 }
